jenkins-adapter-deployment.yml
apiVersion: apps/v1beta1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: jenkins-adapter-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        application: jenkins-adapter-v1
        version: v1
    spec:
      containers:
      - name: jenkins-adapter-v1
        image: consortit-docker-cme-local.jfrog.io/jenkins-adapter:20180509180143
        ports:
        - containerPort: 8080
        - containerPort: 8081
      imagePullSecrets:
        - name: regsecret
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-adapter-v1
  labels:
    application: jenkins-adapter-v1
    version: v1
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      name: external
  selector:
    application: jenkins-adapter-v1
    version: v1
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-adapter-v1
  labels:
    application: jenkins-adapter-v1
spec:
  rules:
  - host: "cme.dev.k8s.consort-it.de"
    http:
      paths:
      - path: /api/v1/jenkins-adapter
        backend:
          serviceName: jenkins-adapter-v1
          servicePort: 80
